# upwood

./: .dockerignore  .env  .env.example  .env.yarn  .gitignore  .gitmodules  Frontend.README.md  README.md  WARP.md  backend.Dockerfile  docker-compose.yml  package.json  prompts.README.md  rustfmt.toml  tsconfig.json
backend/: .env  .gitignore  Cargo.toml  README.md  WARP.md  docker-compose.yml  docker_notes.README.md  package.json
backend/events_listener/: .env  .listener.env  Cargo.toml
backend/events_listener/migrations/2024-07-20-211408_init_listener/: down.sql  up.sql
backend/events_listener/migrations/2024-07-26-182643_init_security_cis2/: down.sql  up.sql
backend/events_listener/migrations/2024-09-15-221625_init_nft_multi_rewarded/: down.sql  up.sql
backend/events_listener/migrations/2024-09-16-121653_init_security_mint_fund/: down.sql  up.sql
backend/events_listener/migrations/2024-09-17-150701_init_security_p2p_trading/: down.sql  up.sql
backend/events_listener/migrations/2024-11-03-021610_init_security_sft_rewards/: down.sql  up.sql
backend/events_listener/src/: lib.rs  listener.rs  schema.rs
backend/events_listener/src/processors/: cis2_security.rs  cis2_utils.rs  identity_registry.rs  mod.rs  nft_multi_rewarded.rs  offchain_rewards.rs  security_mint_fund.rs  security_p2p_trading.rs  security_sft_multi.rs  security_sft_multi_yielder.rs  security_sft_rewards.rs  security_sft_single.rs
backend/events_listener/src/txn_listener/: api.rs  db.rs  listener.rs  mod.rs
backend/events_listener/src/txn_processor/: cis2_utils.rs  mod.rs
backend/migrations/2024-07-22-000059_init_verifier/: up.sql
backend/migrations/2024-07-22-074445_init_identity_registry/: down.sql  up.sql
backend/migrations/2024-07-24-122142_init_market/: up.sql
backend/migrations/2024-07-26-182643_init_security_cis2/: down.sql  up.sql
backend/shared/: Cargo.toml
backend/shared/migrations/2024-07-20-211408_init_listener/: down.sql  up.sql
backend/shared/migrations/2024-07-22-074445_init_identity_registry/: down.sql  up.sql
backend/shared/migrations/2024-07-26-182643_init_security_cis2/: down.sql  up.sql
backend/shared/migrations/2024-09-15-221625_init_nft_multi_rewarded/: down.sql  up.sql
backend/shared/migrations/2024-09-16-121653_init_security_mint_fund/: down.sql  up.sql
backend/shared/migrations/2024-09-17-150701_init_security_p2p_trading/: down.sql  up.sql
backend/shared/migrations/2024-09-17-150702_init_security_sft_rewards/: down.sql  up.sql
backend/shared/migrations/2024-09-22-002551_init_offchain_rewards/: down.sql  up.sql
backend/shared/migrations/2024-09-22-002552_users/: down.sql  up.sql
backend/shared/migrations/2024-10-01-201541_tree_nft/: down.sql  up.sql
backend/shared/migrations/2024-10-28-001742_forest_project/: down.sql  up.sql
backend/shared/src/: api.rs  db.rs  db_shared.rs  lib.rs  schema.rs  schema_manual.rs  test.rs
backend/shared/src/db/: cis2_security.rs  mod.rs  (+9 more)
backend/shared_tests/: Cargo.toml
backend/shared_tests/src/: lib.rs
backend/sponsor/: .api.env  .env  Cargo.toml
backend/sponsor/src/: api.rs
backend/src/: db_setup.rs  main.rs  schema.rs
backend/src/shared/: api.rs  db.rs  mod.rs  test.rs
backend/src/sponsor/: api.rs  mod.rs  sponsor_client.rs
backend/src/txn_listener/: db.rs  listener.rs  mod.rs  schema.rs
backend/src/txn_processor/: api.rs  cis2_api.rs  cis2_db.rs  cis2_processor.rs  db.rs  db_security_cis2.rs  mod.rs  processor_cis2.rs
backend/src/verifier/: api.rs  db.rs  identity_registry_client.rs  mod.rs  web3_id_utils.rs
backend/upwood/: .env  .secure.env.sample  Cargo.toml  diesel.toml
backend/upwood/src/: api_users.rs  lib.rs  schema.rs
backend/upwood/tests/: cognito_auth.rs  s3_public_files.rs  tests_cognito_auth.rs  tests_forest_projects.rs  tests_public_files.rs  tests_tree_nft_metadata.rs  tree_nft_metadata.rs
backend/verifier/: .env  Cargo.toml  diesel.toml
backend/verifier/src/: api.rs  db.rs  identity_registry_client.rs  lib.rs  schema.rs  web3_id_utils.rs
backend_v2/shared/: Cargo.toml
backend_v2/shared/src/: lib.rs  test.rs
backend_v2/sponsor/: .env  Cargo.toml  wallet.export
backend_v2/sponsor/src/: lib.rs  sponsor_client.rs
contracts/concordium-protocols/: Cargo.toml
contracts/concordium-protocols/src/: concordium_cis2_ext.rs  concordium_cis2_security.rs  concordium_cis3.rs  contract_client.rs  lib.rs  rate.rs
contracts/integration-tests/: Cargo.toml  package.json
contracts/integration-tests/src/: cis2.rs  cis2_conversions.rs  cis2_security.rs  cis2_security_rewards.rs  cis2_test_client.rs  cis2_test_contract.rs  compliance.rs  contract_base.rs  euroe.rs  identity_registry.rs  lib.rs  nft_multi_rewarded_client.rs  offchain_rewards_client.rs  security_mint_fund_client.rs  security_nft.rs  security_p2p_trading_client.rs  security_sft.rs  security_sft_multi_client.rs  security_sft_multi_yielder_client.rs  security_sft_rewards_client.rs  security_sft_single_client.rs  sponsor.rs  utils.rs  verifier.rs
contracts/integration-tests/tests/: market.rs  nft.rs  security_mint_fund.rs  security_p2p_trading.rs  security_sft_multi_yielder.rs  security_sft_rewards.rs  security_sft_single.rs  sft.rs  sft_security_rewards.rs  sponsor.rs
contracts/security-nft/: Cargo.toml  package.json
contracts/security-nft/src/: agent.rs  balance_of.rs  burn.rs  error.rs  event.rs  freeze.rs  init.rs  lib.rs  mint.rs  operator.rs  pause.rs  recovery.rs  state.rs  supports.rs  token_metadata.rs  transfer.rs  types.rs
contracts/sponsor/: Cargo.toml  package.json
contracts/sponsor/src/: error.rs  event.rs  init.rs  lib.rs  permit.rs  state.rs  supports_permit.rs  types.rs  utils.rs
contracts/utils/: Cargo.toml  package.json
contracts/utils/src/: agent_with_roles_state.rs  agents_state.rs  cis2_conversions.rs  cis2_schema_types.rs  cis2_security_state.rs  cis2_state.rs  cis2_types.rs  common_types.rs  compliance_types.rs  concordium_cis3.rs  holders_security_state.rs  holders_state.rs  lib.rs  sponsor_types.rs  token_deposits_state.rs  tokens_security_state.rs  tokens_state.rs
(+1002 files in other folders)
