[package]
name = "backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

[dependencies]
concordium-cis2 = { version = "6.1.0", default-features = false }
concordium-rwa-identity-registry = { path = "../contracts/identity-registry" }
concordium-rwa-security-nft = { path = "../contracts/security-nft" }
concordium-rwa-security-sft = { path = "../contracts/security-sft" }
concordium-rwa-compliance = { path = "../contracts/compliance" }
concordium-rwa-market = { path = "../contracts/market" }
concordium-rwa-sponsor = { path = "../contracts/sponsor" }
concordium-rwa-utils = { path = "../contracts/utils" }
concordium-rust-sdk = "4.3.0"
tokio = { version = "1.35.1", features = ["full"] }
anyhow = "1.0.79"
futures = "0.3"
mongodb = "2.1"
bson = { version = "2" }
serde = "1"
async-trait = "0.1.77"
itertools = "0.12.0"
dotenv = "0.15.0"
env_logger = "0.10.1"
log = "0.4.20"
hex = "0.4.3"
num-bigint = "0.4.4"
num-traits = "0.2.14"
poem = "1.3.58"
poem-openapi = { version = "3.0.5", features = ["swagger-ui"] }
clap = { version = "4.4.18", features = ["derive", "env"] }
chrono = "0.4.33"
sha2 = "0.10.8"
serde_json = "1.0"
diesel = { version = "2.1.6", features = ["numeric", "postgres", "r2d2", "chrono"] }
bigdecimal = "0.4.5"
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
r2d2 = "0.8.10"
