[workspace]
members = ["verifier", "events_listener", "shared", "upwood"]
resolver = "2"

[workspace.dependencies]
concordium-cis2 = { version = "6.1.0", default-features = false }
concordium-rust-sdk = "4.3.0"
poem-openapi = { version = "3.0.5", features = ["swagger-ui"] }
poem = "1.3.58"
clap = { version = "4.4.18", features = ["derive", "env"] }
hex = "0.4.3"
tokio = { version = "1.35.1", features = ["full", "tracing"] }
chrono = "0.4.33"
diesel = { version = "2.2.4", features = [
    "numeric",
    "postgres",
    "r2d2",
    "chrono",
    "serde_json",
] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
r2d2 = "0.8.10"
num-bigint = "0.4.4"
num-traits = "0.2.14"
bigdecimal = "0.4.5"
serde_json = "1.0"
futures = "0.3"
dotenvy = "0.15.7"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
backon = "1.2.0"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
serde = "1.0.210"
opentelemetry_sdk = { version = "0.25.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.25.0", features = ["tonic"] }
opentelemetry-semantic-conventions = "0.25.0"
opentelemetry = "0.25.0"
tracing-opentelemetry = "0.26.0"
