[workspace]
members = ["events_listener", "shared", "upwood", "shared_tests"]
resolver = "2"

[workspace.dependencies]
# concordium-smart-contract-testing = "4.4.0"  # Temporarily disabled due to SDK v7.0.0 incompatibility
concordium-cis2 = { version = "6.1.0", features = ["serde"] }
concordium-rust-sdk = { version = "7.0.0" }
poem-openapi = { version = "5.1.16", features = [
    "swagger-ui",
    "chrono",
    "rust_decimal",
    "uuid",
] }
poem = "3.1.12"
clap = { version = "4.4.18", features = ["derive", "env"] }
config = "0.14.0"
hex = "0.4.3"
tokio = { version = "1.35.1", features = ["full", "tracing"] }
chrono = "0.4.33"
diesel = { version = "2.1.6", features = [
    "numeric",
    "postgres",
    "r2d2",
    "chrono",
    "uuid",
    "serde_json",
] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
r2d2 = "0.8.10"
num-bigint = "0.4.4"
num-traits = "0.2.14"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
futures = "0.3"
dotenvy = "0.15.7"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
backon = "1.2.0"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
serde = "1.0.210"
rust_decimal = { version = "1.36.0", features = ["db-diesel-postgres", "maths"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
