[package]
name = "concordium_rwa_events_listener"
edition = "2021"
authors = ["parv@stactrace.com"]

[dependencies]
concordium-cis2 = { version = "6.1.0", default-features = false }
concordium_rwa_backend_shared = { path = "../shared" }
concordium-rust-sdk = "4.3.0"
poem-openapi = { version = "3.0.5", features = ["swagger-ui"] }
poem = "1.3.58"
clap = { version = "4.4.18", features = ["derive", "env"] }
hex = "0.4.3"
tokio = { version = "1.35.1", features = ["full", "tracing"] }
chrono = "0.4.33"
diesel = { version = "2.1.6", features = [
    "numeric",
    "postgres",
    "r2d2",
    "chrono",
] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
r2d2 = "0.8.10"
num-bigint = "0.4.4"
num-traits = "0.2.14"
bigdecimal = "0.4.5"
serde_json = "1.0"
futures = "0.3"
sha2 = "0.10.8"
async-trait = "0.1.77"
concordium-rwa-identity-registry = { path = "../../contracts/identity-registry" }
security-sft-rewards = { path = "../../contracts/security-sft-rewards" }
concordium-rwa-utils = { path = "../../contracts/utils" }
concordium-protocols = { path = "../../contracts/concordium-protocols" }
dotenvy = "0.15.7"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
concordium_rwa_backend_shared = { path = "../shared", features = ["test"] }
