[package]
name = "events_listener"
edition = "2021"
authors = ["parv@stactrace.com"]

[dependencies]
shared = { path = "../shared" }
concordium-rwa-identity-registry = { path = "../../contracts/identity-registry" }
security-sft-rewards = { path = "../../contracts/security-sft-rewards" }
security-sft-single = { path = "../../contracts/security-sft-single" }
offchain-rewards = { path = "../../contracts/offchain-rewards" }
nft-multi-rewarded = { path = "../../contracts/nft-multi-rewarded" }
security-mint-fund = { path = "../../contracts/security-mint-fund" }
security-p2p-trading = { path = "../../contracts/security-p2p-trading" }
concordium-rwa-utils = { path = "../../contracts/utils" }
concordium-protocols = { path = "../../contracts/concordium-protocols" }
concordium-cis2 = { workspace = true }
concordium-rust-sdk = { workspace = true }
poem-openapi = { workspace = true, features = [
    "swagger-ui",
    "chrono",
    "rust_decimal",
] }
poem = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
hex = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }
chrono = { workspace = true }
diesel = { workspace = true, features = [
    "numeric",
    "postgres",
    "r2d2",
    "chrono",
    "serde_json",
] }
diesel_migrations = { workspace = true, features = ["postgres"] }
r2d2 = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
rust_decimal = { workspace = true, features = ["db-diesel-postgres"] }
serde_json = { workspace = true }
futures = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
backon = { workspace = true }
diesel-derive-enum = { workspace = true, features = ["postgres"] }
serde = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
shared_tests = { path = "../shared_tests" }
