[package]
name = "shared"
edition = "2021"
rust-version = "1.74"
authors = ["parv@stactrace.com"]

[dependencies]
concordium-cis2 = { workspace = true, default-features = false }
concordium-rust-sdk = { workspace = true }
poem-openapi = { workspace = true }
clap = { version = "4.4.18", features = ["derive", "env"] }
chrono = "0.4.33"
diesel = { version = "2.1.6", features = [
    "numeric",
    "postgres",
    "r2d2",
    "chrono",
] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
r2d2 = "0.8.10"
num-bigint = "0.4.4"
num-traits = "0.2.14"
bigdecimal = "0.4.5"
