[package]
name = "shared"
edition = "2021"
rust-version = "1.74"
authors = ["parv@stactrace.com"]

[dependencies]
concordium-cis2 = { workspace = true, default-features = false}
concordium-rust-sdk = { workspace = true, default-features = false }
poem-openapi = { workspace = true }
rust_decimal = { workspace = true, features = ["db-diesel-postgres"] }
clap = { version = "4.4.18", features = ["derive", "env"] }
chrono = "0.4.33"
diesel = { version = "2.1.6", features = [
    "numeric",
    "postgres",
    "r2d2",
    "chrono",
    "64-column-tables"
] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
diesel-derive-enum = { workspace = true, features = ["postgres"] }
r2d2 = "0.8.10"
num-bigint = "0.4.4"
num-traits = "0.2.14"
serde.workspace = true
tracing = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.8"
uuid = { workspace = true, features = ["v4", "serde"] }
