[package]
name = "shared_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-test = "0.2.5"
testcontainers = { version = "0.23.1" }
testcontainers-modules = { version = "0.11.2", features = ["postgres"] }
concordium-cis2 = { workspace = true }
concordium-rust-sdk = { workspace = true }
poem-openapi = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true, features = [
    "numeric",
    "postgres",
    "r2d2",
    "chrono",
] }
diesel_migrations = { workspace = true, features = ["postgres"] }
r2d2 = "0.8.10"
num-bigint = { workspace = true }
num-traits = { workspace = true }
