[package]
name = "upwood"
version = "0.1.0"
edition = "2021"
default-run = "upwood_api_server"

[dependencies]
shared = { path = "../shared" }
nft-multi-rewarded = { path = "../../contracts/nft-multi-rewarded" }
poem-openapi = { workspace = true, features = ["swagger-ui", "uuid"] }
poem.workspace = true
uuid = {version = "1.10.0", features = ["v4"]}
diesel = { workspace = true, features = [
    "numeric",
    "postgres",
    "r2d2",
    "chrono",
    "uuid",
] }
diesel_migrations = { workspace = true, features = ["postgres"] }
r2d2 = { workspace = true }
libotp = "0.2.0"
chrono = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }
dotenvy = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
concordium-rust-sdk = { workspace = true }
events_listener = { path = "../events_listener" }
jsonwebtokens-cognito = "0.1.1"
jsonwebtokens = "1.2.0"
serde_json = { workspace = true }
serde = { workspace = true }
hex.workspace = true
aws-config = "1.5.7"
aws-sdk-cognitoidentityprovider = "1.52.0"
sha2 = "0.10.8"
thiserror = { workspace = true }
config.workspace = true
secure-string = { version = "0.3.0", features = ["serde"] }
passwords = "3.1.16"

[dev-dependencies]
shared_tests = { path = "../shared_tests" }
security-sft-single = { path = "../../contracts/security-sft-single" }
integration-tests = { path = "../../contracts/integration-tests" }
concordium-smart-contract-testing = "4.2.0"
concordium-protocols = { path = "../../contracts/concordium-protocols" }
concordium-cis2 = { workspace = true, default-features = false }
rand = { version = "*" }
poem = { workspace = true, features = ["test"] }
tracing-test = { version = "*" }
