[package]
name = "concordium_rwa_verifier_api"
edition = "2021"
authors = ["parv@stactrace.com"]

[dependencies]
concordium-cis2 = { version = "6.1.0", default-features = false }
shared = { path = "../shared" }
concordium-rust-sdk = "4.3.0"
poem-openapi = { version = "3.0.5", features = ["swagger-ui"] }
poem = "1.3.58"
clap = { version = "4.4.18", features = ["derive", "env"] }
hex = "0.4.3"
log = "0.4.20"
anyhow = "1.0.79"
tokio = { version = "1.35.1", features = ["full"] }
chrono = "0.4.33"
diesel = { version = "2.1.6", features = [
    "numeric",
    "postgres",
    "r2d2",
    "chrono",
] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
r2d2 = "0.8.10"
num-bigint = "0.4.4"
num-traits = "0.2.14"
bigdecimal = "0.4.5"
concordium-rwa-identity-registry = { path = "../../contracts/identity-registry" }
concordium-rwa-utils = { path = "../../contracts/utils" }
serde_json = "1.0"
futures = "0.3"
sha2 = "0.10.8"
dotenvy = "0.15.7"
env_logger = "0.10.1"
