[package]
name = "concordium_rwa_sponsor_api"
edition = "2021"
authors = ["parv@stactrace.com"]

[dependencies]
concordium-cis2 = { version = "6.1.0", default-features = false }
concordium-rwa-sponsor = { path = "../../contracts/sponsor" }
concordium_rwa_backend_shared = {path = "../shared"}
concordium-rust-sdk = "4.3.0"
poem-openapi = { version = "3.0.5", features = ["swagger-ui"] }
poem = "1.3.58"
clap = { version = "4.4.18", features = ["derive", "env"] }
hex = "0.4.3"
log = "0.4.20"
anyhow = "1.0.79"
tokio = { version = "1.35.1", features = ["full"] }
chrono = "0.4.33"
dotenv = "0.15.0"
env_logger = "0.10.1"
