[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
concordium-std = { version = "10.1.0", default-features = false }
concordium-cis2 = { version = "6.1.0", default-features = false }
concordium-protocols = { path = "../concordium-protocols" }
concordium-rwa-identity-registry = { path = "../identity-registry" }
concordium-rwa-compliance = { path = "../compliance" }
security-sft-rewards = { path = "../security-sft-rewards" }
security-sft-single = { path = "../security-sft-single" }
security-p2p-trading = { path = "../security-p2p-trading" }
security-mint-fund = { path = "../security-mint-fund" }
nft-multi-rewarded = { path = "../nft-multi-rewarded" }
concordium-smart-contract-testing = { version = "4.2.0" }
concordium_base = "5.0.0"

[lib]
crate-type = ["cdylib", "rlib"]
