[package]
name = "concordium-rwa-security-nft"
version = "0.1.0"
authors = ["Stactrace Solutions <parv@stactrace.com>"]
edition = "2021"
license = "MPL-2.0"

[features]
default = ["std", "wee_alloc"]
std = ["concordium-std/std", "concordium-cis2/std"]
wee_alloc = ["concordium-std/wee_alloc"]

[dependencies]
concordium-std = { version = "8.1.0", default-features = false }
concordium-cis2 = { version = "5.1.0", default-features = false }
hex = { version = "0.4.3" }
concordium-rwa-utils = { path = "../utils" }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "s"
